# ContextGate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  SECURITY.md  chainlit.md  docker-compose.yml  llms.txt  pyproject.toml
.cursor/rules/: contextgate.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-readiness.yml
configs/: policies.yaml
demo/: DATASET.md  README.md  benchmark.jsonl
demo/documents/: cancel-order-en.md  cancel-order-ru.md  cancel-order-uz.md  delete-data-en.md  delete-data-ru.md  delete-data-uz.md  delivery-en.md  delivery-ru.md  delivery-uz.md  invoice-en.md  invoice-ru.md  invoice-uz.md  password-en.md  password-ru.md  password-uz.md  payment-en.md  payment-ru.md  payment-uz.md  returns-en.md  returns-ru.md  returns-uz.md  subscription-en.md  subscription-ru.md  subscription-uz.md  support-en.md  support-ru.md  support-uz.md
docker/postgres/: init-databases.sh
docs/: ai-integration.md  api.md  architecture.md  concepts.md  configuration.md  deployment.md  entities.md  getting-started.md  index.md  launch.md  limitations.md  migration-v0.2.md  openapi.json  operations.md  product.md  repository-map.md  services.md  troubleshooting.md  workflows.md
scripts/: build_demo_dataset.py  check_coverage.py  check_docs.py  e2e_smoke.py  export_openapi.py  load_smoke.py  release_report.py
src/contextgate/: __init__.py
src/contextgate/adapters/celery/: app.py  job_runners.py  queue.py  (+1 more)
src/contextgate/application/: dto.py  retrieval.py  use_cases.py
src/contextgate/apps/: container.py
src/contextgate/config/: __init__.py  policies.py  settings.py
src/contextgate/domain/: documents.py  errors.py  evaluation.py  evidence.py  gateway.py  language.py  models.py  retrieval.py  risk.py
src/contextgate/observability/: metrics.py
src/contextgate/ports/: guardrails.py  repositories.py  router.py  vector_index.py
tests/: conftest.py  test_answer_use_case.py  test_api.py  test_api_dependencies.py  test_application_facades.py  test_application_jobs.py  test_architecture.py  test_auth.py  test_chunking.py  test_cli.py  test_cost_ledger.py  test_demo_dataset.py  test_evaluation.py  test_evidence_guardrails.py  test_generation.py  test_graph.py  test_ingestion_service.py  test_job_outbox.py  test_mlflow_app.py  test_openai_contract.py  test_provider_routing.py  test_retrieval.py  test_router.py  test_vector_store.py
(+35 files in other folders)
