[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "contextgate"
version = "0.1.0"
description = "Evidence-Gated RAG Gateway for retrieval, citations, traces, cost and provider routing."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Akbar Yusupov" }]
keywords = ["rag", "qdrant", "late-interaction", "colbert", "mlflow", "langgraph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "alembic>=1.14,<2",
  "beautifulsoup4>=4.12,<5",
  "celery>=5.4,<6",
  "fastembed>=0.7,<1",
  "fastapi>=0.115,<1",
  "langdetect>=1.0.9,<2",
  "langgraph>=0.6,<2",
  "langgraph-checkpoint-postgres>=2,<4",
  "mlflow>=3.1,<4",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "prometheus-client>=0.21,<1",
  "psycopg[binary]>=3.2,<4",
  "psycopg-pool>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pypdf>=5,<7",
  "python-multipart>=0.0.20,<1",
  "pyyaml>=6,<7",
  "qdrant-client>=1.14,<2",
  "redis>=5,<7",
  "scikit-learn>=1.5,<2",
  "skops>=0.10,<1",
  "sqlalchemy>=2.0,<3",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
llm = ["litellm>=1.70,<2"]
ui = ["chainlit>=2.5,<3", "httpx>=0.28,<1"]
dev = [
  "deptry>=0.25,<1",
  "mypy>=1.15,<2",
  "pytest>=9.0.3,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.11,<1",
  "types-PyYAML>=6.0,<7",
]
all = ["contextgate[llm,ui]"]

[project.scripts]
ctxgate = "contextgate.apps.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/contextgate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["contextgate"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.deptry]
optional_dependencies_dev_groups = ["dev"]
per_rule_ignores = { DEP002 = ["python-multipart"] }
